--- a/index.css
+++ b/index.css
@@ -113,8 +113,8 @@ html, body {
 }
 .nav_element {
     width: 15%;
-    padding: 15px;
-    margin-right: 10px;
+    padding: 20px;
+    /*margin-right: 10px;*/
     margin-bottom: 10px;
 
     
@@ -501,6 +501,9 @@ html, body {
         width: 125px;
         height: 50%;
     } 
+    .classes_item_sec {
+        margin-left: 25px;
+    }
 }
 
 @media screen and (min-width: 600px) and (max-width: 900px) {
@@ -522,6 +525,9 @@ html, body {
         width: 150px;
         height: 60%;
     } 
+    .classes_item_sec {
+        margin-left: 30px;
+    }
 }
 
 @media screen and (min-width: 900px) and (max-width: 1200px) {
@@ -532,4 +538,7 @@ html, body {
         width: 200px;
         height: 80%;
     } 
+    .classes_item_sec {
+        margin-left: 30px;
+    }
 }
