--- a/index.css
+++ b/index.css
@@ -415,7 +415,7 @@ html, body {
     display: none;
     position: fixed;
     width: 55%;
-    height: 70%;
+    height: 300px;
     left: 20%;
     top: 10%;
     z-index: 999;
@@ -444,7 +444,7 @@ html, body {
     flex-direction: row;
     flex: 1 0 1;
     width: 100%;
-    height: 20%;
+    height: 30%;
 }
 .result_backtomain, .result_tryagain {
     width: 45%;
