--- a/index.css
+++ b/index.css
@@ -472,6 +472,15 @@ html, body {
 
 
 @media screen and (max-width: 600px) {
+    .main_title {
+        left: 20px;
+    }
+    .navigation {
+        left: 20px;
+    }
+    .classes {
+        left: 20px;
+    }
     .nav_element {
         width: 25%;
         font-size: 16px;
